fixed spacing issue with message and button from-groups

--- a/staticfiles/css/index.css
+++ b/staticfiles/css/index.css
@@ -175,8 +175,8 @@ nav ul a {
     font-size: 5rem;
     line-height: 5rem;
     width: fit-content;
+    color: var(--malibu);
     margin-bottom: -.5rem;
-    opacity: 0.7 !important;
     transition: color .5s ease;
 }
 
@@ -259,7 +259,13 @@ html.lenis, html.lenis body {
 }
 
 #contact form .submit-group {
-display: flex;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-group {
+    display: flex;
+    align-items: flex-end;
 }
 
 #contact form label {
